--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html {
 body, html {
   margin: 0; padding: 0;
   height: 300vh;
-  background: #111;
+  background: #000000;
   color: #eee;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   overflow-x: hidden;
@@ -24,14 +24,14 @@ body, html {
   transition: opacity 0.8s ease;
   will-change: opacity, transform;
   backface-visibility: hidden;
-  background: #222;
+  background: #000000;
 }
 
 main.content {
   position: relative;
   max-width: 900px;
   margin: 0 auto;
-  padding: 20vh 20px 40px;
+  padding: 30vh 20px 40px;
   z-index: 1;
   user-select: text;
   text-align: center;
@@ -51,14 +51,66 @@ p {
   margin: 0 auto 3rem auto;
 }
 
-section {
-  margin-top: 80vh;
-  padding: 80px 20px;
-  background: #222;
-  border-radius: 8px;
-  box-shadow: 0 0 20px rgba(0,0,0,0.5);
-}
+
 
 html {
   scroll-behavior: smooth;
+}
+
+.card_ctn {
+height: 500px;
+width: 100%;
+display: flex;
+align-items: center;
+justify-content: center;
+gap: 20px;
+}
+
+.card {
+  width: 250px;
+  height: 350px;
+}
+
+#card1 {
+   background-color: red;
+
+}
+
+#card2 {
+   background-color: yellow;
+}
+
+#card3 {
+   background-color: green;
+}
+
+.pic{
+  width: 100%;
+  height: 80%;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: top; 
+  background-color: white;
+}
+#pic1 {
+  background-image: url(https://i.pinimg.com/736x/02/27/20/0227206a3424a408dd464dcd792df62d.jpg);
+}
+
+#pic2 {
+  background-image: url(https://i.pinimg.com/736x/d5/df/72/d5df7294df6ea110744b2dc94216ae8b.jpg);
+}
+
+#pic3 {
+ background-image: url(https://i.pinimg.com/1200x/08/88/c2/0888c2233ebefd8beacc55e715768c22.jpg);
+}
+
+
+.card_txt {
+  width: 100%;
+  height: 20%;
+  background-color: purple;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
 }
